--- a/assets/pug/components/table/product-seller-detail.pug
+++ b/assets/pug/components/table/product-seller-detail.pug
@@ -12,7 +12,7 @@ table.table.equal-space
             tr(class="group")
                 td(class="min-w-[140px]")                    
                     div.flex.items-center(class="gap-[9px]")
-                        img(class="w-[35px] h-[35px] rounded-full" src=`../../assets/images/product/${bodyData.image}`, alt=`${bodyData.product}`) 
+                        img(class="min-w-[40px] w-[40px] h-[40px] rounded-full" src=`../../assets/images/product/${bodyData.image}`, alt=`${bodyData.product}`) 
                         a(href="javascript:void(0)")
                             h4(class="text-xs font-semibold text-title group-hover:text-primary")=bodyData.product
                 td(class="min-w-[80px]")
