--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -52,7 +52,7 @@ if (apexChart)
         script(src='../../assets/js/apexchart/custom-apex-charts.js')
     if(widgetApex)
         script(src='../../assets/js/apexchart/widget-page.js')
-        
+
 
 if (prism)
     // prism js
@@ -171,6 +171,10 @@ if(darkLayout)
 if(gridListView)
     // gridListView js
     script(src="../../assets/js/grid-list-view.js") 
+
+if(landing)
+    // landing js
+    script(src="../../assets/js/landing.js") 
 
 // Custom script   
 script(src='../../assets/js/script.js')   
