--- a/assets/pug/mixin/mixin.pug
+++ b/assets/pug/mixin/mixin.pug
@@ -19,6 +19,7 @@ include ./element-email-data.pug
 include ./element-plus-minus.pug
 include ./element-product-list.pug
 include ./element-product-box.pug
+include ./element-eco-product-box.pug
 include ./element-recent-activity.pug
 include ./element-social-media.pug
 include ./element-task-list-checkbox.pug
