--- a/assets/pug/mixin/element-eco-product-box.pug
+++ b/assets/pug/mixin/element-eco-product-box.pug
@@ -1,217 +1,95 @@
 - 
     var ECO_PRODUCT_BOX = [
         {
-            image: "ecommerce/1.jpg",
-            productName: "Wooden Sofa Set",
-            price: "$339",
-            deletePrice: "$399",
-            delivery:"Free delivery by Govo",
-            discount:"(15% Off)",
-            rating:"43 Ratings",
-            rate: "3.5",
-            label: "Sale"
+            image: "product/13.jpg",
+            productName: "Apple iPhone 12 (128GB)",
+            price: "$185",
+            deletePrice: "$295",
+            label: "Sale",
         },
         {
-            image: "ecommerce/2.jpg",
-            productName: "Latest Headphone",
-            price: "$520",
-            deletePrice: "$650",
-            delivery:"Free delivery by Govo",
-            discount:"(20% Off)",
-            rating:"540 Ratings",
-            rate: "3.9"
+            image: "product/14.png",
+            productName: "Apple Watch Series 8",
+            price: "$85",
+            deletePrice: "$95",
         },
         {
-            image: "ecommerce/3.jpg",
-            productName: "Running Shoes",
+            image: "product/21.png",
+            productName: "Yellow Woman's Bag",
             price: "$75",
             deletePrice: "$150",
-            delivery:"Free delivery by Govo",
-            discount:"(50% Off)",
-            rating:"70 Ratings",
-            rate: "4.6",
-            label: "50% off"
+            badge:"Hot",
         },
         {
-            image: "ecommerce/4.jpg",
-            productName: "Gorgeous Flower Vase",
-            price: "$63",
-            deletePrice: "$70",
-            delivery:"Free delivery by Govo",
-            discount:"(10% Off)",
-            rating:"180 Ratings",
-            rate: "4.8"
+            image: "product/15.png",
+            productName: "Latest Headphone",
+            price: "$80",
+            deletePrice: "$160",
+            label: "Sale",
         },
         {
-            image: "ecommerce/5.jpg",
-            productName: "Cleaning, sanitizing, and disinfecting supplies",
-            price: "$82",
-            deletePrice: "$110",
-            delivery:"Free delivery by Govo",
-            discount:"(25% Off)",
-            rating:"162 Ratings",
-            rate: "3.9"
+            image: "product/19.png",
+            productName: "Brand New Sneakers",
+            price: "$125",
+            deletePrice: "$260",
         },
         {
-            image: "ecommerce/6.jpg",
-            productName: "Apple AirPods",
-            price: "$162",
-            deletePrice: "$200",
-            delivery:"Free delivery by Govo",
-            discount:"(19% Off)",
-            rating:"125 Ratings",
-            rate: "4.5"
-        },
-        {
-            image: "ecommerce/7.jpg",
-            productName: "Three Seater Leather Sofa",
-            price: "$712",
-            deletePrice: "$750",
-            delivery:"Free delivery by Govo",
-            discount:"(5% Off)",
-            rating:"250 Ratings",
-            rate: "3.8",
-            label: "Sale"
-        },
-        {
-            image: "ecommerce/8.jpg",
-            productName: "Gucci Sling Bag",
-            price: "$105",
-            deletePrice: "$138",
-            delivery:"Free delivery by Govo",
-            discount:"(15% Off)",
-            rating:"150 Ratings",
-            rate: "2.5"
-        },
-        {
-            image: "ecommerce/9.jpg",
-            productName: "Nike - Latest Sports Shoes",
-            price: "$176",
-            deletePrice: "$200",
-            delivery:"Free delivery by Govo",
-            discount:"(12% Off)",
-            rating:"150 Ratings",
-            rate: "4.9",
-            label: "12% off"
-        },
-        {
-            image: "ecommerce/10.jpg",
-            productName: "Three Seater Sofa Cum Bed",
-            price: "$299",
-            deletePrice: "$399",
-            delivery:"Free delivery by Govo",
-            discount:"(15% Off)",
-            rating:"150 Ratings",
-            rate: "4.7"
-        },
-        {
-            image: "ecommerce/11.jpg",
-            productName: "Coffee cup",
-            price: "$98",
-            deletePrice: "$110",
-            delivery:"Free delivery by Govo",
-            discount:"(15% Off)",
-            rating:"150 Ratings",
-            rate: "3.6"
-        },
-        {
-            image: "ecommerce/12.jpg",
-            productName: "Leatherette Seater",
-            price: "$485",
-            deletePrice: "$590",
-            delivery:"Free delivery by Govo",
-            discount:"(15% Off)",
-            rating:"150 Ratings",
-            rate: "4.5"
-        },
-        {
-            image: "ecommerce/13.jpg",
-            productName: "Face Wash - For Good Skincare",
+            image: "product/20.png",
+            productName: "Boat Headphone",
             price: "$75",
-            deletePrice: "$100",
-            delivery:"Free delivery by Govo",
-            discount:"(25% Off)",
-            rating:"150 Ratings",
-            rate: "4.9",
-            label: "25% off"
-        },
-        {
-            image: "ecommerce/14.jpg",
-            productName: "Perfume - Great fragrance, Good Mood ",
-            price: "$299",
-            deletePrice: "$399",
-            delivery:"Free delivery by Govo",
-            discount:"(15% Off)",
-            rating:"150 Ratings",
-            rate: "4.7"
-        },
-        {
-            image: "ecommerce/15.jpg",
-            productName: "Sun Glasses - Eye Protection, Regular Usage",
-            price: "$98",
-            deletePrice: "$110",
-            delivery:"Free delivery by Govo",
-            discount:"(15% Off)",
-            rating:"150 Ratings",
-            rate: "3.6"
-        },
-        {
-            image: "ecommerce/16.jpg",
-            productName: "Women's Leather Bags",
-            price: "$212",
-            deletePrice: "$250",
-            delivery:"Free delivery by Govo",
-            discount:"(15% Off)",
-            rating:"150 Ratings",
-            rate: "4.5"
+            deletePrice: "$150",
+            badge:"Hot",
         },
     ];
 
 mixin product2(data)
-    .card.p-3(class="scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none") 
-        .card-body
-            .relative
+    div.card.bg-gray-light.rounded-5.p-3.gap-2
+        div.card-body
+            div.relative
                 if (data.label)
-                    span.badge.bg-secondary.badge-xs.absolute.font-bold(class="top-3 right-3.5 rounded-[3px] text-2xs")= data.label
-                div(class="absolute top-[-1px] left-[-10px] flex flex-col invisible gap-1 p-3 transition-all duration-300 ease-linear opacity-0 cursor-pointer group-hover:visible group-hover:opacity-100 group-hover:left-[-1px]")
-
-                    a(href="wishlist.html" class="btn heart !p-0")
-                        svg(width='0' height='0') 
-                            linearGradient#lgrad(x1="0%" y1="50%" x2="100%" y2="50%")
-                                stop(offset='0%' style='stop-color:rgb(255, 97, 80);stop-opacity:1.00')
-                                stop(offset='100%' style='stop-color:rgb(255, 97, 80);stop-opacity:1.00')
-                        i.fa-solid.fa-heart(class="flex items-center justify-center p-2 bg-white rounded-full")
-                    a(href="cart.html" class="btn shopping-cart !p-0")
-                        svg(width='0' height='0') 
-                            linearGradient#grid(cx="50%" cy="50%" r="50%")
-                                stop(offset='0%' style='stop-color:rgb(181 42 246);stop-opacity:1.00')
-                                stop(offset='100%' style='stop-color:rgb(181 42 246);stop-opacity:1.00')
-                            ellipse(cx='50%' cy='50%' rx='600' ry='200')
-                        i.fa-solid.fa-cart-shopping(class="flex items-center justify-center p-2 bg-white rounded-full")
-                    if (modal === "modal")
-                        label.button-label.p-0.modal-eye(for='productmodal')
-                            svg(width='0' height='0') 
-                                radialGradient#rgrad(cx="50%" cy="50%" r="50%" )
-                                    stop(offset='0%' style='stop-color:rgb(51, 191, 191);stop-opacity:1.00')
-                                    stop(offset='100%' style='stop-color:rgb(51, 191, 191);stop-opacity:1.00')
-                            i.fa-solid.fa-eye(class="flex items-center justify-center p-2 bg-white rounded-full")
-                a(href="product.html")
-                    img(src=`../../assets/images/${data.image}` class="rounded-[4px] w-full" alt="product image")
+                    span.badge.badge-xs.absolute.font-bold(class=`top-3 left-3 rounded-[3px] text-2xs bg-primary`)= data.label
+                if (data.badge)
+                    span.badge.badge-xs.absolute.font-bold(class=`top-3 left-3 rounded-[3px] text-2xs bg-secondary`)= data.badge
+                div(class="absolute cursor-pointer post-media top-3 right-3")
+                    i(data-feather="heart" class="h-5 stroke-border-light fill-border-light wish-like")
+                a(href="product.html" class="block py-5 bg-white")
+                    img(src=`../../assets/images/${data.image}` class="rounded-[4px] w-auto h-[130px] mx-auto" alt="product image")
             div.pt-2 
                 a(href="product.html" class="flex flex-col gap-[0.3rem]")     
                     h4(class="dark:text-white").font-bold.text-sm.text-title.line-clamp-1= data.productName
                     div.flex.items-center(class="pt-0.5 gap-1")
-                        span.text-lg.font-bold.text-primary= data.price
-                        del.text-content3.text-sm= data.deletePrice
-                        small.text-danger.font-sm=data.discount  
-                    div.flex.items-center.gap-1
-                        div.flex.items-center.gap-1.bg-warning.py-1.px-2.rounded-5.max-w-max
-                            i(data-feather="star" class="w-[0.8rem] h-[0.8rem] stroke-white fill-white")
-                            span(class="font-semibold leading-none text-white text-2xs mt-[3px]")= data.rate
-                        span.text-content3.text-xs=data.rating
-                    p(class="dark:text-white").text-title.text-2xs.mt-2=data.delivery
+                        span.text-xs.font-bold.text-primary= data.price
+                        del.text-content3.text-xs.text-semibold= data.deletePrice
+                    div.flex.gap-1.justify-between 
+                        div.flex.flex-wrap.gap-2
+                            div.rating
+                                input.rating-star-2.bg-warning(type='radio' name='rating-1' class="w-4 h-4")
+                                input.rating-star-2.bg-warning(type='radio' name='rating-1' class="w-4 h-4")
+                                input.rating-star-2.bg-warning(type='radio' name='rating-1' class="w-4 h-4")
+                                input.rating-star-2.bg-warning(type='radio' name='rating-1' class="w-4 h-4" checked='')
+                                input.rating-star-2.bg-border-light(type='radio' name='rating-1' class="w-4 h-4")                  
+                        ul.flex.color-variant(class="gap-[3px]")
+                            li(class="leading-[normal]")
+                                button.w-3.h-3.bg-primary.rounded-full(type="button")
+                            li(class="leading-[normal]")
+                                button.w-3.h-3.bg-secondary.rounded-full(type="button")
+                            li(class="leading-[normal]")
+                                button.w-3.h-3.bg-title.rounded-full(type="button")
 
-
+        div.card-footer.pt-2.border-t.border-border-light 
+            ul.timer.countdown-8.flex.flex-wrap.gap-1.justify-center.items-center
+                li
+                    span.days.time-value
+                    span.timer-label Days
+                li
+                    span.hours.time-value
+                    span.timer-label Hours
+                li
+                    span.minutes.time-value
+                    span.timer-label Min
+                li
+                    span.seconds.time-value
+                    span.timer-label Sec
 
 
 
