--- a/assets/postcss/base/_reset.css
+++ b/assets/postcss/base/_reset.css
@@ -136,6 +136,7 @@
     }
   }
 
+    /* Fill Heart Svg */
   .post-media{
     &.post-liked, &.wish-liked{
       .post-like, .wish-like{
@@ -143,12 +144,6 @@
         animation: liked 0.1s ease-in-out;
       }
     }
-    /* &.wish-liked{
-      .wish-like{
-        @apply fill-danger stroke-danger;
-        animation: liked 0.1s ease-in-out;
-      }
-    } */
     &.post-disliked{
       .post-dislike{
         @apply fill-border-dark stroke-border-dark;
@@ -168,6 +163,7 @@
     }
   }
 
+    /* Tada Shake Animation */
   .svg-shake{
     &:hover{
       .strong-hover-shake{
@@ -213,12 +209,14 @@
   }
   
 }
+
 .announcement-image{
   img{
     filter: brightness(0.5);
   }
 } 
 
+  /* Cuatom Ping Animation  */
 div[class*=activity-dot-secondary]{
   animation: round 1.3s ease-in-out infinite;
 }
@@ -239,4 +237,58 @@ div[class*=activity-dot-secondary]{
       transform: scale(1);
     }
 }
+
+  /* Text Underline Hover Effrct */
+.framework-hover{
+  .hover-underline-animation{
+    @apply inline-block relative;
+    &:before{
+      @apply content-[''] absolute w-full h-[.125rem] bottom-0 left-0 origin-bottom-left transform transition-all duration-500 scale-x-0;
+    }
+    &.text-primary{
+      &:before{
+        @apply bg-primary;
+      }
+    }
+    &.text-secondary{
+      &:before{
+        @apply bg-secondary;
+      }
+    }
+  }
+  &:hover{
+    .hover-underline-animation{
+      &:before{
+         @apply scale-x-100 origin-bottom-left;
+      }
+    }
+  }
+}
+
+.rounded-border-main{
+  .rounded-border {
+    @apply relative;
+      &:before{
+        @apply content-[''] w-[45px] h-[45px] rounded-full absolute left-0 top-0 border-dashed border-primary;
+      }
+    }
+  &:hover{
+    .rounded-border {
+      &:before{
+        @apply border-white;
+        animation: rotate 2s infinite linear;
+      }
+    }
+  }
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 
