--- a/assets/postcss/utils/_variables.css
+++ b/assets/postcss/utils/_variables.css
@@ -10,6 +10,7 @@
   --info-light: #b52af64d;
   --warning: #feb858;
   --warning-light: #feb8584d;
+  --warning-extralight: #F8AA4B1A;
   --danger: #f1523d; 
   --danger-light: #f1523d4d;  
   --light: #d8ecff; 
