--- a/assets/pug/data/widgets.pug
+++ b/assets/pug/data/widgets.pug
@@ -93,15 +93,14 @@
                 data:" Expenses Compared to last year",
                 chart:"totalExpensesLineChart",
             },
-            {
+            { 
                 title:"Total Order",
                 icon:"Order",
                 status:"warning",
                 profit:21.745,
-                gros:12.13,
+                gros:12.13, 
                 data:" Order Compared to last year",
-                //- chart:"totalSaveBarChart",
+                chart:"progress bar",
                 progress:"55",
-
             }
         ] 
