--- a/assets/pug/mixin/element-widget4.pug
+++ b/assets/pug/mixin/element-widget4.pug
@@ -14,9 +14,10 @@ mixin widget4(data)
           h2(class="text-2xl font-extrabold text-title")= data.profit
 
     div(class="flex items-end col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3")
-      if(data.chart)
-
-
+      div
+        div.progress-bar(class="dark:bg-border-dark")
+           div(class="bg-warning" style="width:100%")
+      if(data.chart) 
         div(id=`${data.chart}`)
       if(data.progress)
         .progress.progress-striped
