--- a/html/template/ecommerce.html
+++ b/html/template/ecommerce.html
@@ -1015,7 +1015,7 @@
         </div>
         <!-- Sidebar End -->
         <!-- Page Body Start-->
-        <div class="page-body">
+        <div class="page-body"> 
           <div class="grid grid-cols-12 gap-card-gap">
             <div class="col-span-6 xl:col-span-12"> 
               <div class="grid grid-cols-2 gap-card-gap">
@@ -1037,6 +1037,11 @@
                         </div>
                       </div>
                       <div class="flex items-end col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3">
+                        <div>
+                          <div class="progress-bar dark:bg-border-dark">
+                            <div class="bg-warning" style="width:100%"></div>
+                          </div>
+                        </div>
                         <div id="totalSellBarChart"></div>
                       </div>
                     </div>
@@ -1071,6 +1076,11 @@
                         </div>
                       </div>
                       <div class="flex items-end col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3">
+                        <div>
+                          <div class="progress-bar dark:bg-border-dark">
+                            <div class="bg-warning" style="width:100%"></div>
+                          </div>
+                        </div>
                         <div id="totalCustomerLineChart"></div>
                       </div>
                     </div>
@@ -1105,6 +1115,11 @@
                         </div>
                       </div>
                       <div class="flex items-end col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3">
+                        <div>
+                          <div class="progress-bar dark:bg-border-dark">
+                            <div class="bg-warning" style="width:100%"></div>
+                          </div>
+                        </div>
                         <div id="totalExpensesLineChart"></div>
                       </div>
                     </div>
@@ -1139,6 +1154,12 @@
                         </div>
                       </div>
                       <div class="flex items-end col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3">
+                        <div>
+                          <div class="progress-bar dark:bg-border-dark">
+                            <div class="bg-warning" style="width:100%"></div>
+                          </div>
+                        </div>
+                        <div id="progress bar"></div>
                         <div class="progress progress-striped">
                           <div class="progress-bar"></div>
                         </div>
@@ -1160,8 +1181,8 @@
               </div>
             </div>
             <div class="col-span-6 xl:col-span-6 xl3:col-span-12">
-              <div class="card gap-0"> 
-                <div class="card-header">
+              <div class="card gap-0">
+                <div class="card-header"> 
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                     <h3 class="text-lg font-bold leading-none text-title">Sales Summary ( Jun 2023)</h3>
                     <div class="flex items-center gap-4">
@@ -1464,9 +1485,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body">
-                  <div class="relative"></div>
-                  <div class="grid grid-cols-12"> 
+                <div class="card-body"> 
+                  <div class="grid grid-cols-12 flex gap-4">
                     <div class="col-span-9 xl:col-span-3 2md:col-span-12">
                       <div class="custom-data-label apex-custom-text 2md:-mt-[12px] ml-[-40px] 2md:ml-0" id="OrdersStatus"></div>
                     </div>
@@ -1497,7 +1517,7 @@
               </div>
             </div>
             <div class="col-span-4 lg:col-span-12 lg:-order-1">
-              <div class="card">
+              <div class="card"> 
                 <div class="card-header">
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                     <h3 class="text-lg font-bold text-title leading-none">Customers</h3>
