--- a/assets/postcss/utils/_variables.css
+++ b/assets/postcss/utils/_variables.css
@@ -22,6 +22,7 @@
   --dark-header2: #31322d; 
   --chart-dark: #072448; 
   --chart-dark-track: #072448;
+  --landing-bg: #F9F9F9;
   /* Border Color */
   --border-dark: #2c4050;
   --border-light: #ededed;
