--- a/assets/pug/data/widgets.pug
+++ b/assets/pug/data/widgets.pug
@@ -100,7 +100,7 @@
                 profit:21.745,
                 gros:12.13, 
                 data:" Order Compared to last year",
-                chart:"progress bar",
+                // chart:"progress bar",
                 progress:"55",
             }
         ] 
