--- a/assets/postcss/components/_progress-bar.css
+++ b/assets/postcss/components/_progress-bar.css
@@ -45,6 +45,32 @@
       div {
         @apply h-6 md:h-4;
       }
+    } 
+  }
+  .progress{
+    @apply bg-content rounded-[5px] shadow-none ;
+  } 
+  .progress-striped{
+    &.progress-bar{
+      &.progress-bar-striped{ 
+        background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+      } 
+    } 
+  }
+  .progress-striped .progress-bar, .progress-bar-striped{
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent); 
+    background-size: 40px 40px;
+  } 
+  .progress{
+    &.active{
+      .progress-bar {
+        animation: progress-bar-stripes 2s linear infinite;
+      }
+    }
+  }
+  .progress-bar{ 
+    &.progress-bar-warning{
+      @apply !bg-warning ;
     }
   }
 }
