--- a/assets/pug/mixin/element-widget4.pug
+++ b/assets/pug/mixin/element-widget4.pug
@@ -13,24 +13,13 @@ mixin widget4(data)
           h5(class="text-base font-bold text-content3")= data.title
           h2(class="text-2xl font-extrabold text-title")= data.profit
 
-    div(class="flex items-end col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3")
-      div
-        div.progress-bar(class="dark:bg-border-dark")
-           div(class="bg-warning" style="width:100%")
+    div(class="block col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3 ")
+
       if(data.chart) 
         div(id=`${data.chart}`)
       if(data.progress)
-        .progress.progress-striped
-          .progress-bar
-        //- .progress
-        //-   .progress-bar.progress-bar-striped.active(role='progressbar' aria-valuenow='40' aria-valuemin='0' aria-valuemax='100', style=`width:${data.progress}%`)
-
-        //- div.progress-bar(class="dark:bg-border-dark")
-        //-   div(class="bg-warning" style=`width:${data.progress}%`)
-
-        //- .progress.progress-striped.active
-        //-   .progress-bar(role='progressbar progress-striped')
-        //-     div(class="bg-warning" style=`width: ${data.progress}%;`)
+        .progress.progress-striped.active(class="mb-[38px] mt-[22px]")
+          .progress-bar.progress-bar-warning(role='progressbar ', style=`width: ${data.progress}%;`)
 
   div.card-footer.border-t.border-border-light
     div.flex.items-center(class="p-4 gap-2 3xl:gap-[6px]")
