--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4776,7 +4776,7 @@ body.monochrome-mode:before {
 
 .progress {
   border-radius: 5px;
-  background-color: var(--content);
+  background-color: var(--warning-extralight);
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -4791,9 +4791,21 @@ body.monochrome-mode:before {
     background-size: 40px 40px;
   }
 
-.progress.active .progress-bar {
+/* .progress{
+    &.active{
+      .progress-bar {
         animation: progress-bar-stripes 2s linear infinite;
       }
+    }
+  } */
+
+.progress.active .progress-bar, .progress-bar.active{
+    animation: progress-bar-stripes 2s linear infinite;
+  }
+
+.progress-bar.active, .progress.active .progress-bar{
+    animation: progress-bar-stripes 2s linear infinite;
+  }
 
 .progress-bar.progress-bar-warning {
   background-color: var(--warning) !important;
@@ -16307,6 +16319,15 @@ div[class*=activity-dot-secondary]{
 /*=====================
   3.20  Progress Bar Css
   ==========================*/
+
+@keyframes progress-bar-stripes{ 
+  0% {
+    background-position: 40px 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
 
 /*=====================
   3.21  Prism Custom Css
