ecommerce  dashboard complete

--- a/assets/pug/mixin/element-eco-product-box.pug
+++ b/assets/pug/mixin/element-eco-product-box.pug
@@ -77,7 +77,7 @@ mixin product2(data)
                                 button.w-3.h-3.bg-title.rounded-full(type="button")
 
         div.card-footer.pt-2.border-t.border-border-light 
-            ul.timer.countdown-8.flex.flex-wrap.gap-1.justify-center.items-center
+            ul.timer.countdown-8.flex.gap-1.justify-center.items-center
                 li
                     span.days.time-value
                     span.timer-label Days
