--- a/assets/postcss/components/_progress-bar.css
+++ b/assets/postcss/components/_progress-bar.css
@@ -48,35 +48,37 @@
     } 
   }
   .progress{
-    @apply rounded-[5px] shadow-none bg-warning-extralight ;
+    @apply rounded-[3px] shadow-none bg-warning-extralight;
   } 
-  .progress-striped{  
-    &.progress-bar{
-      &.progress-bar-striped{ 
-        background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-      } 
+  .progress-striped {
+    .progress-bar {
+      background-image: linear-gradient(120deg, rgba(248, 170, 75, 1) 25%, transparent 25%, transparent 50%, rgba(248, 170, 75, 1) 50%, rgba(248, 170, 75, 1) 75%, transparent 75%, transparent);
+      background-size: 16px 25px;
+    } 
+    &.progress-bar-striped {
+      background-image: linear-gradient(120deg, rgba(248, 170, 75, 1) 25%, transparent 25%, transparent 50%, rgba(248, 170, 75, 1) 50%, rgba(248, 170, 75, 1) 75%, transparent 75%, transparent);
+      background-size: 16px 25px;
+    }
+  }
+  .progress-bar.active {
+    animation: progress-bar-stripes 5s linear infinite;
+    &.progress.active {
+      .progress-bar {
+        animation: progress-bar-stripes 5s linear infinite;
+      }
     } 
   }
-  .progress-striped .progress-bar, .progress-bar-striped{
-    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent); 
-    background-size: 40px 40px;
-  } 
-  /* .progress{
-    &.active{
-      .progress-bar {
-        animation: progress-bar-stripes 2s linear infinite;
-      }
+  .progress.active {
+    .progress-bar {
+      animation: progress-bar-stripes 5s linear infinite;
     }
-  } */
-  .progress.active .progress-bar, .progress-bar.active{
-    animation: progress-bar-stripes 2s linear infinite;
-  }
-  .progress-bar.active, .progress.active .progress-bar{
-    animation: progress-bar-stripes 2s linear infinite;
+    &.progress-bar.active {
+      animation: progress-bar-stripes 5s linear infinite;
+    }
   }
   .progress-bar{ 
     &.progress-bar-warning{
-      @apply !bg-warning ;
+      @apply  bg-warning-extralight rounded-[3px];
     }
   }
 }
