--- a/assets/pug/pages/template/ecommerce.pug
+++ b/assets/pug/pages/template/ecommerce.pug
@@ -25,7 +25,7 @@
 include ../../data/all-data
 
 //- all mixin
-include ../../mixin/mixin
+include ../../mixin/mixin 
 
 doctype html
 html(lang='en')
@@ -47,7 +47,7 @@ html(lang='en')
                                 each data in WIDGET4_DATA 
                                     div.col-span-1(class="md:col-span-2")
                                         div.card.svg-shake(class="gap-0 p-0")
-                                            +widget4(data) 
+                                            +widget4(data)
                         div.col-span-6(class="xl:col-span-6 xl3:col-span-12")
                             div.card.gap-0
                                 div.card-header  
@@ -63,7 +63,7 @@ html(lang='en')
                                                     div.radialBar-legend-series 
                                                         span.radialBar-legend-marker.secondary
                                                         p(class="!mt-0").radialBar-legend-text.text-3xs.text-title Orders
-                                            div.dropdown.on-hover-show 
+                                            div.dropdown.on-hover-show
                                                 button(class="flex rounded-full items-center justify-center p-[5px] bg-gray-light dark:bg-sidebar-dark2") 
                                                     +SVG_ICON("Setting","w-[18px] h-[18px] stroke-title")   
                                                 div.dropdown-menu 
@@ -77,7 +77,6 @@ html(lang='en')
                                 div.card-body
                                     div.relative
                                         div#salesSummaryChart 
-                                        //- div#recentStatisticsChart2(class="absolute inset-0")
                         div.col-span-7(class="lg:col-span-12 lg:-order-1")
                             div.card
                                 div.card-header 
@@ -107,12 +106,10 @@ html(lang='en')
                                 div.card-header
                                     +card-header("Orders Status (May 10)","setting", HISTORY_DROPDOWN)
                                 div.card-body 
-                                    //- div.relative p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relativep-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relativep-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative
-                                        //- div#OrdersStatus
                                     div.grid.grid-cols-12.flex.gap-4
-                                        div.col-span-9(class="xl:col-span-3 2md:col-span-12")
+                                        div.col-span-9(class="xl:col-span-9 2md:col-span-12")
                                             div#OrdersStatus.custom-data-label.apex-custom-text(class="2md:-mt-[12px] ml-[-40px] 2md:ml-0")
-                                        div.col-span-3(class="xl:col-span-9 2md:col-span-12") 
+                                        div.col-span-3(class="xl:col-span-3 2md:col-span-12") 
                                             ul(class="flex flex-col gap-[14px] 2md:gap-[8px] 2md:flex-row 2md:flex-wrap")
                                                 each item in USERS_POSITIONS
                                                     li
@@ -121,7 +118,7 @@ html(lang='en')
                                                             span(class="text-xs font-semibold text-left line-clamp-1 ")= item.title
                         div.col-span-4(class="lg:col-span-12 lg:-order-1")
                             div.card 
-                                div.card-header
+                                div.card-header 
                                     +card-header("Customers","setting", HISTORY_DROPDOWN)
                                 div.card-body 
                                     div.relative
@@ -192,7 +189,20 @@ html(lang='en')
                         div.col-span-4(class="lg:col-span-12 lg:-order-1")
                             div.card
                                 div.card-header
-                                    +card-header("Global Sales by top Locations","setting", HISTORY_DROPDOWN)
+                                    div.flex.justify-between.w-full(class=`flex-wrap gap-2 items-center`)
+                                        h3(class="text-lg font-bold leading-none text-title") Global Sales by top Locations
+                                        div.flex.items-center.gap-4
+                                            div(class="2xl:hidden").dropdown.on-hover-show
+                                                button(class="flex  rounded-full items-center justify-center p-[5px] bg-gray-light dark:bg-sidebar-dark2 ") 
+                                                    +SVG_ICON("Setting","w-[18px] h-[18px] stroke-title")   
+                                                div.dropdown-menu
+                                                    ul 
+                                                        li
+                                                            a(href="javascript:void(0)") Yearly
+                                                        li 
+                                                            a(href="javascript:void(0)") Monthly
+                                                        li
+                                                            a(href="javascript:void(0)") Weekly
                                 div.card-body 
                                     div.overflow-auto.custom-scroll  
                                         include ../../components/table/sale-detail
@@ -213,7 +223,6 @@ html(lang='en')
                                             each data in ECO_PRODUCT_BOX 
                                                 div.swiper-slide 
                                                     +product2(data)
-
                 // Page Body End 
                 +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
             include ../../components/customizer
