--- a/html/template/ecommerce.html
+++ b/html/template/ecommerce.html
@@ -1141,7 +1141,7 @@
                       </div>
                       <div class="block col-span-5 5xl:col-span-4 2xl:col-span-5 2lg:col-span-4 3sm:col-span-3 ">
                         <div class="progress progress-striped active mb-[38px] mt-[22px]">
-                          <div class="progress-bar progress-bar-warning" role="progressbar " style="width: 55%;"></div>
+                          <div class="progress-bar progress-bar-warning" role="progressbar " style="width: 70%;"></div>
                         </div>
                       </div>
                     </div>
@@ -1178,7 +1178,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="dropdown on-hover-show"> 
+                      <div class="dropdown on-hover-show">
                         <button class="flex rounded-full items-center justify-center p-[5px] bg-gray-light dark:bg-sidebar-dark2"> 
                           <svg class="w-[18px] h-[18px] stroke-title"> 
                             <use href="../../assets/svg/sprite.svg#Setting"> </use>
@@ -1467,10 +1467,10 @@
                 </div>
                 <div class="card-body"> 
                   <div class="grid grid-cols-12 flex gap-4">
-                    <div class="col-span-9 xl:col-span-3 2md:col-span-12">
+                    <div class="col-span-9 xl:col-span-9 2md:col-span-12">
                       <div class="custom-data-label apex-custom-text 2md:-mt-[12px] ml-[-40px] 2md:ml-0" id="OrdersStatus"></div>
                     </div>
-                    <div class="col-span-3 xl:col-span-9 2md:col-span-12"> 
+                    <div class="col-span-3 xl:col-span-3 2md:col-span-12"> 
                       <ul class="flex flex-col gap-[14px] 2md:gap-[8px] 2md:flex-row 2md:flex-wrap">
                         <li>
                           <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-success h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Rephrase Words</span></button>
@@ -1498,7 +1498,7 @@
             </div>
             <div class="col-span-4 lg:col-span-12 lg:-order-1">
               <div class="card"> 
-                <div class="card-header">
+                <div class="card-header"> 
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                     <h3 class="text-lg font-bold text-title leading-none">Customers</h3>
                     <div class="dropdown on-hover-show">
@@ -1609,19 +1609,21 @@
               <div class="card">
                 <div class="card-header">
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
-                    <h3 class="text-lg font-bold text-title leading-none">Global Sales by top Locations</h3>
-                    <div class="dropdown on-hover-show">
-                      <button class="flex rounded-full items-center justify-center p-[5px] bg-gray-light dark:bg-sidebar-dark2"> 
-                        <svg class="w-[18px] h-[18px] stroke-title"> 
-                          <use href="../../assets/svg/sprite.svg#Setting"> </use>
-                        </svg>
-                      </button>
-                      <div class="dropdown-menu">
-                        <ul>
-                          <li><a href="javascript:void(0)">Yearly</a></li>
-                          <li><a href="javascript:void(0)">Monthly</a></li>
-                          <li><a href="javascript:void(0)">Weekly</a></li>
-                        </ul>
+                    <h3 class="text-lg font-bold leading-none text-title">Global Sales by top Locations</h3>
+                    <div class="flex items-center gap-4">
+                      <div class="2xl:hidden dropdown on-hover-show">
+                        <button class="flex  rounded-full items-center justify-center p-[5px] bg-gray-light dark:bg-sidebar-dark2 "> 
+                          <svg class="w-[18px] h-[18px] stroke-title"> 
+                            <use href="../../assets/svg/sprite.svg#Setting"> </use>
+                          </svg>
+                        </button>
+                        <div class="dropdown-menu">
+                          <ul> 
+                            <li><a href="javascript:void(0)">Yearly</a></li>
+                            <li> <a href="javascript:void(0)">Monthly</a></li>
+                            <li><a href="javascript:void(0)">Weekly</a></li>
+                          </ul>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -1890,7 +1892,7 @@
                                 </div></a></div>
                           </div>
                           <div class="card-footer pt-2 border-t border-border-light"> 
-                            <ul class="timer countdown-8 flex flex-wrap gap-1 justify-center items-center">
+                            <ul class="timer countdown-8 flex gap-1 justify-center items-center">
                               <li><span class="days time-value"></span><span class="timer-label">Days</span></li>
                               <li><span class="hours time-value"></span><span class="timer-label">Hours</span></li>
                               <li><span class="minutes time-value"></span><span class="timer-label">Min</span></li>
@@ -1934,7 +1936,7 @@
                                 </div></a></div>
                           </div>
                           <div class="card-footer pt-2 border-t border-border-light"> 
-                            <ul class="timer countdown-8 flex flex-wrap gap-1 justify-center items-center">
+                            <ul class="timer countdown-8 flex gap-1 justify-center items-center">
                               <li><span class="days time-value"></span><span class="timer-label">Days</span></li>
                               <li><span class="hours time-value"></span><span class="timer-label">Hours</span></li>
                               <li><span class="minutes time-value"></span><span class="timer-label">Min</span></li>
@@ -1978,7 +1980,7 @@
                                 </div></a></div>
                           </div>
                           <div class="card-footer pt-2 border-t border-border-light"> 
-                            <ul class="timer countdown-8 flex flex-wrap gap-1 justify-center items-center">
+                            <ul class="timer countdown-8 flex gap-1 justify-center items-center">
                               <li><span class="days time-value"></span><span class="timer-label">Days</span></li>
                               <li><span class="hours time-value"></span><span class="timer-label">Hours</span></li>
                               <li><span class="minutes time-value"></span><span class="timer-label">Min</span></li>
@@ -2022,7 +2024,7 @@
                                 </div></a></div>
                           </div>
                           <div class="card-footer pt-2 border-t border-border-light"> 
-                            <ul class="timer countdown-8 flex flex-wrap gap-1 justify-center items-center">
+                            <ul class="timer countdown-8 flex gap-1 justify-center items-center">
                               <li><span class="days time-value"></span><span class="timer-label">Days</span></li>
                               <li><span class="hours time-value"></span><span class="timer-label">Hours</span></li>
                               <li><span class="minutes time-value"></span><span class="timer-label">Min</span></li>
@@ -2066,7 +2068,7 @@
                                 </div></a></div>
                           </div>
                           <div class="card-footer pt-2 border-t border-border-light"> 
-                            <ul class="timer countdown-8 flex flex-wrap gap-1 justify-center items-center">
+                            <ul class="timer countdown-8 flex gap-1 justify-center items-center">
                               <li><span class="days time-value"></span><span class="timer-label">Days</span></li>
                               <li><span class="hours time-value"></span><span class="timer-label">Hours</span></li>
                               <li><span class="minutes time-value"></span><span class="timer-label">Min</span></li>
@@ -2110,7 +2112,7 @@
                                 </div></a></div>
                           </div>
                           <div class="card-footer pt-2 border-t border-border-light"> 
-                            <ul class="timer countdown-8 flex flex-wrap gap-1 justify-center items-center">
+                            <ul class="timer countdown-8 flex gap-1 justify-center items-center">
                               <li><span class="days time-value"></span><span class="timer-label">Days</span></li>
                               <li><span class="hours time-value"></span><span class="timer-label">Hours</span></li>
                               <li><span class="minutes time-value"></span><span class="timer-label">Min</span></li>
